# rust-practices

./: Cargo.toml  README.md
src/: game.rs  main.rs  ui.rs
tetris-macro/src/: lib.rs
tetris/tetris-macro/: Cargo.toml
