[package]
name = "tetris"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]

[[bin]]
name = "tetris"
path = "src/main.rs"

[dependencies]
crossterm = "0.25.0"
matrix = "0.22.0"
rand = "0.8.5"
tui = "0.19.0"
tetris-macro = { path = "tetris-macro" }
